// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа MobileClients.answerDeleteClicked 1`] = `
<div
  className="mobileClients"
>
  <input
    id="btnViewAllUser"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    id="btnViewActiveUser"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    id="btnViewBlockedUser"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <hr />
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="backgroundColorGreen"
        >
          active
        </td>
        <td>
          <input
            id="101_edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="101_delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="backgroundColorGreen"
        >
          active
        </td>
        <td>
          <input
            id="105_edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="105_delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="backgroundColorGreen"
        >
          active
        </td>
        <td>
          <input
            id="110_edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="110_delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="backgroundColorRed"
        >
          blocked
        </td>
        <td>
          <input
            id="120_edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="120_delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    id="answerAddClicked"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;

exports[`работа MobileClients.answerDeleteClicked 2`] = `
<div
  className="mobileClients"
>
  <input
    id="btnViewAllUser"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    id="btnViewActiveUser"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    id="btnViewBlockedUser"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <hr />
  <table>
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="backgroundColorGreen"
        >
          active
        </td>
        <td>
          <input
            id="105_edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="105_delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Пётр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="backgroundColorGreen"
        >
          active
        </td>
        <td>
          <input
            id="110_edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="110_delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="backgroundColorRed"
        >
          blocked
        </td>
        <td>
          <input
            id="120_edit"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            id="120_delete"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    id="answerAddClicked"
    onClick={[Function]}
    type="button"
    value="Добавить клиента"
  />
</div>
`;
